tests/rune_literal_invalid_escape_bad.stderr
tests/rune_literal_invalid_escape_bad.sl:2:12: error: SL1016: invalid rune escape sequence
