tests/rune_literal_invalid_escape_bad.sl
// Verifies rune literal invalid escape is rejected.
const x = '\q'
